--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -23,6 +23,9 @@ FORM:
     USERNAME:       "Username"
 
 REGISTRATION:
+  ACTIVATION:
+    TITLE:          'Letzswap | Activation required'
+    INFO:           'Your Letzswap account is almost ready! Please check your email account to activate it.'
   MAIL:
     TITLE:          'Please, activate your Letzswap account'
     TEXT:           'Hello %name%, your brand new Letzswap account was successfully created! To start swapping, please activate your account.'
