--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -15,16 +15,17 @@ FORM:
         BLANK:      "Password cannot be blank"
         LENGTH:     "Password should be at least {{ limit }} characters"
         DONT_MATCH: "Typed passwords don't match"
-      LABEL:
-        FIRST:      "Password"
-        REPEAT:     "Please, repeat your password"
+      FIRST:        "Password"
+      REPEAT:       "Please, repeat your password"
+    EMAIL:          "Email address"
     SUBMIT:         "Submit"
     TOS_ACCEPTED:   "I've read and accept the Terms of Service"
     USERNAME:       "Username"
 
 REGISTRATION:
+  TITLE:            "Registration Form"
   ACTIVATION:
-    TITLE:          'Letzswap | Activation required'
+    TITLE:          'Activation required'
     INFO:           'Your Letzswap account is almost ready! Please check your email account to activate it.'
   MAIL:
     TITLE:          'Please, activate your Letzswap account'
