--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -1,26 +1,13 @@
-HOME:
-  ITEM_COUNT:             'Total items count'
-NAV.HOME:                 'Home'
-NAV.TERMS:                'Terms of Service'
-NAV.LOGIN:                'Login'
-NAV.REGISTER:             'Register'
-NAV.LOGOUT:               'Logout'
-NAV.LOGGED_AS:            'Logged in as %username%'
-
-NAV.ADD_ITEM:             'Add a item to swap/give'
-  USERNAME:
-    LABEL:                'Username'
-  TITLE:
-    LABEL:                'Title'
-  DESCRIPTION:
-    LABEL:                'Description'
-  CONDITION_STATUS:
-    LABEL:                'Select the condition'
-  PICTURE:
-    LABEL:                'Choose a picture'
-  SUBMIT:
-    LABEL:                 'Submit'
-
-
-
-
+NAV.TERMS: __NAV.TERMS
+NAV.ADD_ITEM: __NAV.ADD_ITEM
+NAV.LOGOUT: __NAV.LOGOUT
+NAV.LOGIN: __NAV.LOGIN
+NAV.REGISTER: __NAV.REGISTER
+REGISTRATION.ACTIVATION.TITLE: __REGISTRATION.ACTIVATION.TITLE
+REGISTRATION.ACTIVATION.INFO: __REGISTRATION.ACTIVATION.INFO
+REGISTRATION.TITLE: __REGISTRATION.TITLE
+REGISTRATION.MAIL.TITLE: __REGISTRATION.MAIL.TITLE
+REGISTRATION.MAIL.TEXT: __REGISTRATION.MAIL.TEXT
+REGISTRATION.MAIL.HTML.PLEASE_CLICK: __REGISTRATION.MAIL.HTML.PLEASE_CLICK
+REGISTRATION.MAIL.HTML.LINK: __REGISTRATION.MAIL.HTML.LINK
+REGISTRATION.MAIL.TXT.COPY_LINK: __REGISTRATION.MAIL.TXT.COPY_LINK
