--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -2,7 +2,7 @@ HOME:
   ITEM_COUNT:             'Total items count'
 NAV.HOME:                 'Home'
 NAV.TERMS:                'Terms of Service'
-NAV.LOGIN:                'Login'
+NAV.LOGIN:                'Log-in'
 NAV.REGISTER:             'Register'
 NAV.LOGOUT:               'Logout'
 NAV.LOGGED_AS:            'Logged in as %username%'
@@ -14,9 +14,9 @@ FORM:
       ERROR:
         BLANK:      "Password cannot be blank"
         LENGTH:     "Password should be at least {{ limit }} characters"
-        DONT_MATCH: "Typed passwords don't match"
+        DONT_MATCH: "Passwords don't match"
       FIRST:        "Password"
-      REPEAT:       "Please, repeat your password"
+      REPEAT:       "Please retype your password"
     EMAIL:          "Email address"
     SUBMIT:         "Submit"
     TOS_ACCEPTED:   "I've read and accept the Terms of Service"
@@ -26,10 +26,10 @@ REGISTRATION:
   TITLE:            "Registration Form"
   ACTIVATION:
     TITLE:          'Activation required'
-    INFO:           'Your Letzswap account is almost ready! Please check your email account to activate it.'
+    INFO:           'Your Letzswap account was created! Please check your email account to activate it.'
   MAIL:
-    TITLE:          'Please, activate your Letzswap account'
-    TEXT:           'Hello %name%, your brand new Letzswap account was successfully created! To start swapping, please activate your account.'
+    TITLE:          'Thank you for joining the LetzSwap community'
+    TEXT:           'Hello %name%, your LetzSwap account was successfully created! Follow the activation link to enjoy Swap now.'
     HTML:
       PLEASE_CLICK: 'Please click'
       LINK:         'on this activation link'
