--- a/translations/contact.en.yaml
+++ b/translations/contact.en.yaml
@@ -1,5 +1,5 @@
 CONTACT:
   FORM:
-    TITLE:    'Send us a message!"
+    TITLE:    'Send us a message!'
     EMAIL:    'Please insert your email'
     MESSAGE:  'Please type your message'
