--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -41,6 +41,8 @@ NAV.ABOUT:                'More about Letzswap'
 
 CONTACT:
   FORM:
-    EMAIL:                'Please insert your email'
-    MESSAGE:              'Please insert your question/message'
+    TITLE:    'Send us a message!'
+    NAME:     'Your name'
+    EMAIL:    'Please insert your email'
+    MESSAGE:  'Please type your message'
 
