--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -43,11 +43,18 @@ CONTACT:
   FORM:
     TITLE:    'Send us a message!'
     NAME:     'Your name'
+    SUBJECT:  'The subject of your message'
     EMAIL:    'Please insert your email'
     MESSAGE:  'Please type your message'
 
 ITEM:
   NEW:
-    TITLE: 'Add new Item'
-    PAGETITLE: 'Add new Item | LëtzSwap!'
-    BACKLINK: 'Back to the items list'
+    TITLE:      'Add new Item'
+    PAGETITLE:  'Add new Item | LetzSwap!'
+    BACKLINK:   'Back to the items list'
+
+ADD_ITEM:
+  TITLE:        'Title'
+  DESCRIPTION:  'Describe your item'
+  STATUS:       'Select the condition of your item'
+  PICTURE:      'Choose your picture'
