--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -1,43 +1,15 @@
 HOME:
   ITEM_COUNT:             'Total items count'
-NAV.HOME:                 'Home'
-NAV.TERMS:                'Terms of Service'
-NAV.LOGIN:                'Login'
-NAV.REGISTER:             'Register'
-NAV.LOGOUT:               'Logout'
-NAV.LOGGED_AS:            'Logged in as %username%'
-NAV.ADD_ITEM:             'Add a item to swap/give'
 
-
-FORM:
-  USER:
-    PASSWORD:
-      ERROR:
-        BLANK:      "Password cannot be blank"
-        LENGTH:     "Password should be at least {{ limit }} characters"
-        DONT_MATCH: "Passwords don't match"
-      FIRST:        "Password"
-      REPEAT:       "Please retype your password"
-    EMAIL:          "Email address"
-    SUBMIT:         "Submit"
-    TOS_ACCEPTED:   "I've read and accept the Terms of Service"
-    USERNAME:       "Username"
-
-REGISTRATION:
-  TITLE:            "Registration Form"
-  ACTIVATION:
-    TITLE:          'Activation required'
-    INFO:           'Your Letzswap account was created! Please check your email account to activate it.'
-  MAIL:
-    TITLE:          'Thank you for joining the LetzSwap community'
-    TEXT:           'Hello %name%, your LetzSwap account was successfully created! Follow the activation link to enjoy Swap now.'
-    HTML:
-      PLEASE_CLICK: 'Please click'
-      LINK:         'on this activation link'
-    TXT:
-      COPY_LINK:    'Please, copy the following link and paste it in your web browser:'
-
-NAV.ABOUT:                'More about Letzswap'
+NAV:
+  HOME:                 'Home'
+  TERMS:                'Terms of Service'
+  LOGIN:                'Login'
+  REGISTER:             'Register'
+  LOGOUT:               'Logout'
+  LOGGED_AS:            'Logged in as %username%'
+  ADD_ITEM:             'Add a item to swap/give'
+  ABOUT:                'More about Letzswap'
 
 CONTACT:
   FORM:
