--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -50,4 +50,4 @@ ITEM:
   NEW:
     TITLE: 'Add new Item'
     PAGETITLE: 'Add new Item | LëtzSwap!'
-    BACKLINK: 'Back to the items list'
+    BACKLINK: 'Go back'
