--- a/translations/contact.en.po
+++ b/translations/contact.en.po
@@ -5,13 +5,13 @@ msgstr ""
 "Language: en\n"
 
 msgid "CONTACT.FORM.TITLE"
-msgstr "Send us a message!"
+msgstr "Send us a message and we will get back to you"
 
 msgid "CONTACT.FORM.NAME"
 msgstr "Your name"
 
 msgid "CONTACT.FORM.EMAIL"
-msgstr "Please insert your email"
+msgstr "Your contact email"
 
 msgid "CONTACT.FORM.MESSAGE"
-msgstr "Please type your message"
+msgstr "Your message"
